adicionado componente de contato/footer

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -6,12 +6,17 @@
 
 @layer base {
   h1,
-  h2 {
+  h2,
+  h3 {
     @apply font-inter text-5xl font-medium leading-10 text-custom-white-50;
   }
 
   h2 {
     @apply text-[2rem];
+  }
+
+  h3 {
+    @apply text-[1.375rem];
   }
 
   p {
